force-app/main/default/objects/Vacation_Request__c/Vacation_Request__c.object-meta.xml
<CustomObject>
    <label>Vacation Request</label>
    <nameField>
        <label>Vacation Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vacation Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>