force-app/main/default/objects/Vacation_Request__c/fields/Notified_BCM__c.field-meta.xml
<CustomField>
    <fullName>Notified_BCM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notified Bcm</label>
    <type>Checkbox</type>
</CustomField>