force-app/main/default/objects/Vacation_Request__c/fields/Notified_Security__c.field-meta.xml
<CustomField>
    <fullName>Notified_Security__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notified Security</label>
    <type>Checkbox</type>
</CustomField>