force-app/main/default/objects/Vacation_Request__c/fields/Vacation_From__c.field-meta.xml
<CustomField>
    <fullName>Vacation_From__c</fullName>
    <label>Vacation From</label>
    <type>Date</type>
</CustomField>