force-app/main/default/objects/Vacation_Request__c/fields/Vacation_To__c.field-meta.xml
<CustomField>
    <fullName>Vacation_To__c</fullName>
    <label>Vacation To</label>
    <type>Date</type>
</CustomField>